# template-scikit-cmake-swig

./: .gitignore  CMakeLists.txt  README.md  mypylib.i  setup.py
MyLib/: CMakeLists.txt
MyLib/include/: mylib.h
MyLib/src/: mylib.c
